--- a/_misc.scss
+++ b/_misc.scss
@@ -1,58 +1,66 @@
-/* Miscellanoeous */
-body,
-html {
-  overflow-x: hidden;
-  padding-right: 0 !important; // resets padding right added by Bootstrap modal
+/* Miscellaneous Mixins */
+
+// general transform
+@mixin transform($transforms) {
+	   -moz-transform: $transforms;
+	     -o-transform: $transforms;
+	    -ms-transform: $transforms;
+	-webkit-transform: $transforms;
+          transform: $transforms;
 }
 
-*:-moz-full-screen,
-*:-webkit-full-screen,
-*:fullscreen *:-ms-fullscreen {
-  overflow: auto;
+// rotate
+@mixin rotate ($deg) {
+  @include transform(rotate(#{$deg}deg));
 }
 
-.container-scroller {
+// scale
+@mixin scale($scale) {
+	 @include transform(scale($scale));
+}
+// translate
+@mixin translate ($x, $y) {
+   @include transform(translate($x, $y));
+}
+// skew
+@mixin skew ($x, $y) {
+   @include transform(skew(#{$x}deg, #{$y}deg));
+}
+//transform origin
+@mixin transform-origin ($origin) {
+    moz-transform-origin: $origin;
+	     -o-transform-origin: $origin;
+	    -ms-transform-origin: $origin;
+	-webkit-transform-origin: $origin;
+          transform-origin: $origin;
+}
+//Ellipsis
+%ellipsor{
+	text-overflow: ellipsis;
+	overflow: hidden;
+	max-width:100%;
+	white-space: nowrap;
+}
+
+@mixin ellipsor {
+  text-overflow: ellipsis;
   overflow: hidden;
+  max-width: 100%;
+  white-space: nowrap;
 }
 
-pre {
-  background: color(gray-lighter);
-  padding: 15px;
-  font-size: 14px;
-}
-
-code {
-  padding: 5px;
-  color: $danger;
-  font-family: $type1-light;
-  font-size: $default-font-size;
-  border-radius: 4px;
-}
-
-.page-header {
-  @extend .d-flex;
-  @extend .justify-content-between;
-  @extend .align-items-center;
-  margin: 0 0 1.5rem 0;
-  .breadcrumb {
-    border: 0;
-    margin-bottom: 0;
-  }
-}
-.page-title {
-  color: $page-title-color;
-  font-size: 1.125rem;
-  margin-bottom: 0;
-  .page-title-icon {
-    display: inline-block;
-    width: 36px;
-    height: 36px;
-    border-radius: 4px;
-    text-align: center;
-    box-shadow: 0px 3px 8.3px 0.7px rgba(163, 93, 255, 0.35);
-    i {
-      font-size: .9375rem;
-      line-height: 36px;
-    }
-  }
+// Placeholder
+@mixin placeholder {
+	&::-webkit-input-placeholder {
+		@content
+	}
+	&:-moz-placeholder {
+		@content
+	}
+	&::-moz-placeholder {
+		@content
+	}
+	&:-ms-input-placeholder {
+		@content
+	}
 }
